--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -1,38 +1,47 @@
 <div class="container">
   <h1>Deep Wells</h1>
-    <form class="d-flex" role="search" style="width: 25%">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-light text-right float-end" type="submit">Search</button>
-        </form> <br>
-  
-  <table class="table table-hover table-bordered ">
-  <thead>
-    <tr>
-      <th style="width: 60%">Deep Well Name</th>
-      <th style="width: auto;">Edit</th>
-      <th style="width: auto;">Delete</th>
-
-    </tr>
-  </thead>
-  <tbody>
-    <% @deep_wells.each do |deep_well| %>
-      <tr>
-        <td><%= link_to deep_well.name, [@client, deep_well] %></td>
-        <td><%= link_to 'Edit', edit_client_deep_well_path(@client, deep_well) %></td>
-        <td><%= link_to 'Destroy', [@client, deep_well], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+    <form class="d-flex" role="search">
+    <%= search_form_for @q, url: client_deep_wells_path(params[:client_id]) do |f| %>
+      <%= f.search_field :deep_well_name_cont, class:"form-control me-2", placeholder:"Search" %>
+      <%= f.submit "Search", class:"btn btn-light text-right float-end" %>
+      <%= link_to "Reset", request.path, class:"btn btn-light text-right float-end" %>
     <% end %>
-  </tbody>
-</table>
-<br>
 
-    <div style="float:right">
-      <button type="button" class="btn btn-light" >
-        <%= link_to 'New Deep Well', new_client_deep_well_path %>
-      </button>
-      <button type="button" class="btn btn-light" >
-        <%= link_to 'Back', islands_path %>
-      </button>
-    </div>
+    </form>
+
+    <br>
+  
+    <table class="table table-hover table-bordered ">
+    <thead>
+      <tr>
+        <th style="width: 60%">Deep Well Name</th>
+        <th style="width: auto;">Edit</th>
+        <th style="width: auto;">Delete</th>
+
+      </tr>
+    </thead>
+    <tbody>
+      <% @deep_wells.each do |deep_well| %>
+        <tr>
+          <td><%= link_to deep_well.deep_well_name, [@client, deep_well] %></td>
+          <td><%= link_to 'Edit', edit_client_deep_well_path(@client, deep_well) %></td>
+          <td><%= link_to 'Destroy', [@client, deep_well], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+  
+  <br>
+
+  <div style="float:right">
+    <button type="button" class="btn btn-light" >
+      <%= link_to 'Back', islands_path %>
+    </button>
+
+    <button type="button" class="btn btn-light" >
+      <%= link_to 'New Deep Well', new_client_deep_well_path %>
+    </button>
+    
+  </div>
 
 </div>
