--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -14,7 +14,7 @@
   
   
   <div class="field">
-    <%= form.text_field :name, class:"form-control", autofocus:true %>
+    <%= form.text_field :client_name, class:"form-control", autofocus:true %>
   </div>
 
   <br>
