--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -17,7 +17,7 @@
     <div class="col">
       <div class="field">
         <%= form.label "Deep Well Name:" %>
-        <%= form.text_field :name, class:"form-control",autofocus:true %>
+        <%= form.text_field :deep_well_name, class:"form-control",autofocus:true %>
       </div>
       <div class="field">
         <%= form.label "Client Name:" %>
