--- a/app/views/islands/index.html.erb
+++ b/app/views/islands/index.html.erb
@@ -1,10 +1,5 @@
 <div class="container">
-  <h1>Islands</h1>
-    <form class="d-flex" role="search" style="width: 25%">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-light text-right float-end" type="submit">Search</button>
-        </form> <br>
-  
+  <h1>Islands</h1>  
   <table class="table table-hover table-bordered ">
   <thead>
     <tr>
@@ -19,7 +14,7 @@
   <tbody>
     <% @islands.each do |island| %>
       <tr>
-        <td><%= link_to island.name, island_clients_path(island)%></td>
+        <td><%= link_to island.island_name, island_clients_path(island)%></td>
         <td><%= Client.where(:island_id => island).count %></td>
         <td><%= link_to 'Edit', edit_island_path(island) %></td>
         <td><%= link_to 'Delete', island, method: :delete, data: { confirm: 'Are you sure?' } %></td>
