--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @deep_well.name %>
+  <%= @deep_well.deep_well_name %>
 </p>
 <p>
   <strong>Date Granted:</strong>
