--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -13,7 +13,7 @@
     <table class="table table-hover table-bordered ">
     <thead>
       <tr>
-        <th style="width: 60%">Deep Well Name</th>
+        <th style="width: 60%"><%= sort_link(@q, :deep_well_name, "Deep WellName", default_order: :asc)%></th>
         <th style="width: auto;">Edit</th>
         <th style="width: auto;">Delete</th>
 
