--- a/app/views/deep_wells/new.html.erb
+++ b/app/views/deep_wells/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New Deep Well</h1>
+<div class="container">
+	<h1>New Deep Well</h1>
 
-<%= render 'form', deep_well: @deep_well %>
-
-<%= link_to 'Back', client_deep_wells_path(@client) %>
+	<%= render 'form', deep_well: @deep_well %>
+	<br> <br>
+</div> 
