--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -2,7 +2,7 @@
 	<%= search_form_for @q do |f|%>
 
 	<%= f.search_field :first_name_or_last_name_or_email_cont , placeholder: "Search", class:'form-control' %>&nbsp;
-	<%= f.submit "Search", class: 'btn btn-light' %>
-
+	<%= f.submit "Search", class: 'btn btn-light' %>&nbsp;
+    <%= link_to "Reset", request.path, class:"btn btn-light text-right float-end" %>
 	<% end %>
-</form>
+</form>  
