Back-end tweaks

--- a/app/views/user_otp_mailer/login_otp.html.erb
+++ b/app/views/user_otp_mailer/login_otp.html.erb
@@ -1,5 +1,5 @@
 <p>
-  Hello <%= @user.first_name %>! Here is your OTP: <%= @user.current_otp %>
+  Hello <%= @user.email %>! Here is your OTP: <%= @user.current_otp %>
 </p>
 <p>
   If you did not request this otp please consider changing your password and/or email used to prevent unauthorized access
