--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -76,11 +76,9 @@
     <%= form.file_field :asbuilt, class:"form-control" %>
   </div>
     <div class="mb-3">
-    <%= form.label "Deepwell Design:", class:"form-label" %>
+    <%= form.label "Deepwell Design:"%>
     <%= form.file_field :design, class:"form-control" %>
   </div>
-
-
 
     <div class="actions" style="float:right">
     <%= form.submit :Submit, class: 'btn btn-light'%>
