Debugged island form

--- a/app/views/islands/new.html.erb
+++ b/app/views/islands/new.html.erb
@@ -1,6 +1,6 @@
-<form>
-	<div class="container">
-		<h1>New Island</h1>
-		<%= render 'form', island: @island %>
-	</div>
-</form>
+<div class="container">
+	<h1>New Island</h1>
+
+	Enter island here:
+	<%= render 'form', island: @island %>
+</div>
