--- a/app/views/islands/_form.html.erb
+++ b/app/views/islands/_form.html.erb
@@ -2,7 +2,6 @@
   <% if island.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(island.errors.count, "error") %> prohibited this island from being saved:</h2>
-
       <ul>
         <% island.errors.full_messages.each do |message| %>
           <li><%= message %></li>
@@ -11,19 +10,16 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= form.label :name %><br>
-    <%= form.text_field :name, class:"form-control", autofocus:true %>
+  <div class="field">
+    <%= form.text_field :island_name, class:"form-control", autofocus:true %>
   </div>
 
-  <br><div class="form-actions">
-    <%= form.submit class:"btn btn-primary" %>
-      <button type="button" class="btn text-right float-end" >
-      <%= link_to 'Show', @island %>
-    </button>
-    <button type="button" class="btn text-right float-end" >
-      <%= link_to 'Back', islands_path %> <br>
-    </button>
+  <br>
+  <div class="actions" style="float:right">
+    <%= form.submit :Submit, class: 'btn btn-light'%>
+        <button type="button" class="btn btn-light" >
+          <%= link_to 'Back', islands_path %>
+        </button>
   </div>
 
 <% end %>
