--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 	<h1>Editing Client</h1>
 	<div>
-		
+		Enter Client Here: 
 		<%= render 'form', client: @client %>
 
 	</div>
