--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container">
 
   <h2> <%= @deep_well.deep_well_name %> Information </h2>
@@ -134,12 +132,9 @@
 
   <div style="float:right">
 
-    <button type="button" class="btn btn-light" >
-        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]) %> 
-    </button>
-    <button type="button" class="btn btn-light" >
-        <%= link_to 'Back', [@client, :deep_wells] %>
-    </button>
+        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]), class: "btn btn-primary" %> 
+        <%= link_to 'Back', [@client, :deep_wells], class: "btn btn-light" %>
+
     <br>
   </div>
 </div>
