--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -57,10 +57,8 @@
 
     <br/>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <button type="button" class="btn btn-light" >
-        <%= link_to "Back", :back %>
-      </button>
-      <%= f.submit "Update", class:'btn btn-light .btn-block' %>
+      <%= f.submit "Update", class:'btn btn-primary .btn-block' %>
+      <%= link_to "Back", :back, class:'btn btn-light .btn-block' %>
     </div>
   
     
