--- a/app/views/users/_search_form.html.erb
+++ b/app/views/users/_search_form.html.erb
@@ -1,4 +1,4 @@
-<form class="d-flex" role="search" style="width: 30%">
+<form class="d-flex" role="search" style="width: auto">
 	<%= search_form_for @q do |f|%>
 
 	<%= f.search_field :first_name_or_last_name_or_email_cont , placeholder: "Search", class:'form-control' %>&nbsp;
