--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: [@island, client], local: true) do |form| %>
   <% if client.errors.any? %>
     <div id="error_explanation">
@@ -16,10 +17,8 @@
 
   <br>
   <div class="actions" style="float:right">
-    <%= form.submit :Submit, class: 'btn btn-light'%>
-        <button type="button" class="btn btn-light" >
-          <%= link_to 'Back', island_clients_path %>
-        </button>
+    <%= form.submit :Submit, class: 'btn btn-primary'%>
+    <%= link_to 'Back', island_clients_path, class:"btn btn-light" %>
   </div>
 
 <% end %>
