--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -4,19 +4,23 @@
     <form class="d-flex" role="search" style="width: auto">
     <%= search_form_for @q, url: client_deep_wells_path(params[:client_id]) do |f| %>
       <%= f.search_field :deep_well_name_cont, class:"form-control me-2", placeholder:"Search" %>
-      <%= f.submit "Search", class:"btn btn-light text-right float-end" %>
+      <%= f.submit "Search", class:"btn btn-light text-right float-end" %>&nbsp;
       <%= link_to "Reset", request.path, class:"btn btn-light text-right float-end" %>
     <% end %>
+        <br>
+
+      <%= link_to 'New Deep Well', new_client_deep_well_path, class:"btn btn-primary", style:"float: left" %>
+      <%= link_to 'Back', island_clients_path(@client), class:"btn btn-light", style:"float: right" %>
+      <br>
     </form>
   <!-- Search Form End -->
-
 
     <br>
   
     <table class="table table-hover table-bordered ">
     <thead>
       <tr>
-        <th style="width: 60%"><%= sort_link(@q, :deep_well_name, "Deep WellName", default_order: :asc)%></th>
+        <th style="width: 60%"><%= sort_link(@q, :deep_well_name, "Deep Well Name", default_order: :asc)%></th>
         <th style="width: auto;">Edit</th>
         <th style="width: auto;">Delete</th>
 
@@ -32,17 +36,4 @@
       <% end %>
     </tbody>
   </table>
-  
-  <br>
-
-  <div style="float:right">
-
-    <button type="button" class="btn btn-light" >
-      <%= link_to 'New Deep Well', new_client_deep_well_path %>
-    </button>
-    <button type="button" class="btn btn-light" >
-      <%= link_to 'Back', island_clients_path(@client) %>
-    </button>
-    <br>
-  </div>
 </div>
