--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -119,7 +119,7 @@
           </p>
         <% else %>
           <p>
-            <i><strong>Deep Well Design</strong> (UNAVAILABLE)</i>
+            <i><strong> Proposed Deep Well Design</strong> (UNAVAILABLE)</i>
           </p>
         <% end %>
       </td>
