--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,44 +1,53 @@
 <div class="container">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
+  <h2>Settings</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     
     <%= render "devise/shared/error_messages", resource: resource %>
-
+  <h5>User Information Settings</h5>
     <div class="row">
       <div class="col"> 
           <div class="field form-group">
             <%= f.label :first_name %><br/>
             <%= f.text_field :first_name, class:"form-control", autofocus: true%>
           </div>
-          <div class="field form-group">
-            <%= f.label :email %><br/>
-            <%= f.email_field :email, class:"form-control" %>
-          </div>
-          <div class="field form-group">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation, class:"form-control" %>
-          </div>
+
       </div>
       <div class="col">
         <div class="field form-group">
           <%= f.label :last_name %><br/>
           <%= f.text_field :last_name, class:"form-control col-sm-10"%>
         </div>
-        <div class="field form-group ">
+      </div>
+      <br>     
+    </div>
+          <div class="field form-group">
+            <%= f.label :email %><br/>
+            <%= f.email_field :email, class:"form-control" %>
+          </div>
+<br>
+<h5> Password Settings </h5>
+
+<div class="field form-group ">
           <%= f.label :password %> 
           <% if @minimum_password_length %>
             <em><i>(<%= @minimum_password_length %> characters minimum)</i></em>
           <% end %>
           <%= f.password_field :password, class:"form-control", placeholder:"(leave blank if you don't want to change it)"%>
         </div>
+
+          <div class="field form-group">
+            <%= f.label :password_confirmation %>
+            <%= f.password_field :password_confirmation, class:"form-control" %>
+          </div>
+
+<br>
+    <h5> Confirm Changes </h5>
+
         <div class="field form-group">
-            <%= f.label :current_password %> <i>(Will be used to confirm changes)</i><br/>
+            <%= f.label "Enter current password to confirm changes:" %> <br/>
             <%= f.password_field :current_password, class:"form-control" %>
           </div>
-      </div>
-      <br>     
-    </div>
 <br>
     <div class="card" style="width: auto">
       <div class="card-header">
