--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,13 +22,19 @@
     <% @users.each do |user| %>
       <tr>
         <td>
+          <% user.nil? %>
           <% if user.first_name == nil || user.last_name == nil %>
             <p> Not set by user <p>
           <% else %>
             <p><%= user.first_name %> <%= user.last_name %></p>
           <% end %>
         </td>
-        <td><%= user.email %></td>
+        <td>
+          <% if user == nil %>
+            <p>No user responsible. Action done through console.</p>
+          <% else %>
+            <p><%= user.email %></p>
+        </td>
         <td>
           <% if user.admin? %>
           Admin
