--- a/app/views/two_factor_settings/new.html.erb
+++ b/app/views/two_factor_settings/new.html.erb
@@ -2,6 +2,8 @@
   <div class="row">
     <div class="col-md-12">
       <h2>Two Factor Authentication</h2>
+      
+    
       <br>
     </div>
   </div>
@@ -14,8 +16,14 @@
           <div class="card-body">
             <p>Please confirm by entering your current password.</p>
             <%= simple_form_for(:two_fa, url: two_factor_settings_path, method: :post) do |f| %>
+              <% if alert%>
+                <div class="alert alert-danger alert-dismissible fade show container" role="alert" style="width: auto; height: auto;">
+                    <%= alert %>
+                  <button type="button" class="btn btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <% end %>
             <%= f.input :password, placeholder: "Password" %>
-            <br>
+            <br> 
             <%= f.submit 'Confirm and Enable Two Factor', class: 'btn btn-primary' %>
             <% end %>
           </div>
